--- a/ng/src/app/filter-options/filter-selects/filter-selects.component.html
+++ b/ng/src/app/filter-options/filter-selects/filter-selects.component.html
@@ -1,30 +1,25 @@
 <form [formGroup]="selectForm" class="row">
-  <ng-container
-    *ngFor="
-      let selectGroup of selectGroups$ | async;
-      first as first;
-      last as last
-    "
-  >
-
+  @for (
+    selectGroup of selectGroups$ | async; track
+    selectGroup; let first = $first; let last = $last) {
     <div class="col-12 col-md-4" [ngClass]="{ firstOrLast: first || last }">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>{{ titlePrefix + " " + selectGroup?.Category }}</mat-label>
         <mat-select
           [formControlName]="selectGroup?.Category"
           [compareWith]="isSelected"
-        >
+          >
           <mat-option>Show all</mat-option>
-          <ng-container *ngFor="let option of selectGroup?.Options">
+          @for (option of selectGroup?.Options; track option) {
             <mat-option
               [value]="option"
               (onSelectionChange)="handleFilterSelection($event)"
               [disabled]="option?.Disabled"
               >{{ option?.Title }}</mat-option
-            >
-          </ng-container>
-        </mat-select>
-      </mat-form-field>
-    </div>
-  </ng-container>
-</form>
+              >
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
+    }
+  </form>
