--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
@@ -2,7 +2,7 @@
   ::ng-deep {
     .mdc-form-field {
       display: flex;
-      align-items: end;
+      align-items: flex-end;
       .mdc-label {
         font-weight: 300;
       }
