--- a/ng/src/app/app-list/app-list-item/app-list-item.component.html
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.html
@@ -1,61 +1,40 @@
 <div class="container">
   <!-- wird verwendet, wenn es über Routing auf die Detail weiter geleitet wird -->
   <!-- <a routerLink="/details/{{ app.Id }}" class="stretched-link"> -->
-  <a
-    href="https://2sxc.org/apps/app/{{ app.UrlKey }}"
-    target="_blank"
-    class="stretched-link"
-    >
-    <div
-      class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-1 ml-1"
-      >
+  <a href="https://2sxc.org/apps/app/{{ app.UrlKey }}" target="_blank" class="stretched-link">
+    <div class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-1 ml-1">
       <!-- Image links -->
       <div class="col-6 col-sm-4 col-lg-2 mb-3">
         <img class="img-fluid" [src]="app?.Icon" />
       </div>
 
-      <!-- Content mitte -->
+      <!-- Content -->
       <div class="col-12 col-sm-8 col-lg-6 mb-3">
         <h4>
-          <a
-            class="text-decoration-none"
-            href="https://2sxc.org/apps/app/{{ app.UrlKey }}"
-            target="_blank"
-            >{{ app?.Name }}</a
-            >
-            @if (!!app?.Type?.Title) {
-              <span
-                class="ml-2 type"
-            [ngClass]="{
+          <a class="text-decoration-none" href="https://2sxc.org/apps/app/{{ app.UrlKey }}" target="_blank">{{ app?.Name
+            }}</a>
+          @if (!!app?.Type?.Title) {
+          <span class="ml-2 type" [ngClass]="{
               stable: app?.Type?.Id === appTypeIds.stable,
               top: app?.Type?.Id === appTypeIds.top,
               old: app?.Type?.Id === appTypeIds.old
-            }"
-                >{{ app?.Type?.Title }}</span
-                >
-              }
-              @if (app?.IsNew) {
-                <span
-                  class="type new"
-                  [ngStyle]="{ 'margin-left.px': !!app?.Type ? 2 : 10 }"
-                  >New</span
-                  >
-                }
-              </h4>
-              <span
-                class="short-description"
-                [innerHTML]="app?.ShortDescription"
-              ></span>
-            </div>
-
-            <!-- Tags rechts -->
-            <div class="col-12 col-lg-4">
-              @for (Tag of app?.Tags; track Tag) {
-                <span class="badge bg-secondary tags mb-1 mr-1">{{
-                  Tag?.Title
-                }}</span>
-              }
-            </div>
-          </div>
-        </a>
+            }">{{ app?.Type?.Title }}</span>
+          }
+          @if (app?.IsNew) {
+          <span class="type new" [ngStyle]="{ 'margin-left.px': !!app?.Type ? 2 : 10 }">New</span>
+          }
+        </h4>
+        <span class="short-description" [innerHTML]="app?.ShortDescription"></span>
       </div>
+
+      <!-- Tags rechts -->
+      <div class="col-12 col-lg-4">
+        @for (Tag of app?.Tags; track Tag) {
+        <span class="badge bg-secondary tags mb-1 mr-1">{{
+          Tag?.Title
+          }}</span>
+        }
+      </div>
+    </div>
+  </a>
+</div>
