--- a/ng/src/app/app-list/app-list-item/app-list-item.component.html
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.html
@@ -1,24 +1,24 @@
 <div class="container">
   <!-- wird verwendet, wenn es über Routing auf die Detail weiter geleitet wird -->
   <!-- <a routerLink="/details/{{ app.Id }}" class="stretched-link"> -->
-  <a href="https://2sxc.org/apps/app/{{ app.UrlKey }}" target="_blank" class="stretched-link">
-    <div class="row mb-1 pt-3 align-items-center w-100 item d-flex flex-wrap justify-content-center mr-1 ml-1">
+  <a href="/apps/app/{{ app.UrlKey }}" class="stretched-link">
+    <div class="row align-items-center w-100 item d-flex flex-wrap justify-content-center py-2 py-md-2">
       <!-- Image links -->
-      <div class="col-6 col-sm-4 col-lg-2 mb-3">
+      <div class="col-6 col-sm-4 col-lg-2 mb-2 mb-md-0">
         <img class="img-fluid" [src]="app?.Icon" />
       </div>
 
       <!-- Content -->
-      <div class="col-12 col-sm-8 col-lg-6 mb-3">
+      <div class="col-12 col-sm-8 col-lg-6 mb-2 mb-md-0">
         <h4>
-          <a class="text-decoration-none" href="https://2sxc.org/apps/app/{{ app.UrlKey }}" target="_blank">{{ app?.Name
-            }}</a>
+          {{ app?.Name }}
           @if (!!app?.Type?.Title) {
           <span class="ml-2 type" [ngClass]="{
               stable: app?.Type?.Id === appTypeIds.stable,
               top: app?.Type?.Id === appTypeIds.top,
               old: app?.Type?.Id === appTypeIds.old
-            }">{{ app?.Type?.Title }}</span>
+            }">
+            {{ app?.Type?.Title }}</span>
           }
           @if (app?.IsNew) {
           <span class="type new" [ngStyle]="{ 'margin-left.px': !!app?.Type ? 2 : 10 }">New</span>
@@ -27,14 +27,23 @@
         <span class="short-description" [innerHTML]="app?.ShortDescription"></span>
       </div>
 
-      <!-- Tags rechts -->
-      <div class="col-12 col-lg-4">
-        @for (Tag of app?.Tags; track Tag) {
-        <span class="badge bg-secondary tags mb-1 mr-1">{{
-          Tag?.Title
-          }}</span>
+      <!-- Tags right, max height 50px + 0.35rem -->
+      <div class="col-12 col-lg-4 tag-custom" >
+        <!-- Show Tags, if more then 2 Tags Rows, set a gradient and click to show the other Tags-->
+        <a href="javascript:void(0)">
+        <div  class="d-flex flex-wrap" [ngClass]="{ 'with-gradient': tagsContainer.scrollHeight > 60 && !isExpanded }"
+          [ngStyle]="{ 'max-height': isExpanded ? 'none' : 'calc(60px + 0.35rem)', 'overflow': 'hidden' }"
+          #tagsContainer (click)="toggleExpand()" style="gap: 0.35rem; cursor: pointer;">
+         <!-- Get all Tags as Badge -->
+          @for (tag of app?.Tags; track tag) {
+          <span  class="badge bg-secondary tags m-0">
+            {{ tag?.Title }}
+          </span>
         }
+        </div>
+      </a>
       </div>
+
     </div>
   </a>
 </div>
