--- a/ng/src/app/app-list/app-list-item/app-list-item.component.scss
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.scss
@@ -1,16 +1,20 @@
 .container {
-  transition: all 225ms ease-in-out;
   &:not(.item) {
     border-bottom: 1px solid #efefef;
   }
   &:hover {
-    background-color: rgba(128, 128, 128, 0.205);
+    background-color: rgba(230,230,230,1);
+
+    .with-gradient:after {
+      background: linear-gradient(rgba(255,255,255,0), rgba(230,230,230,1));
+    }
   }
 }
 
 img {
   border-radius: 30px 0 30px 0;
-  min-width: 100px;
+  width: 90px;
+  min-width: 60px;
 }
 
 .type {
@@ -58,4 +62,32 @@ h4 {
   color: black !important;
   font-size: 0.8rem !important;
   font-weight: 400 !important;
+}
+
+.tag-custom {
+  .with-gradient {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    font-weight: 400;
+    cursor: pointer;
+    line-height: 24px;
+    max-height: 48px;
+    min-height: 48px;
+    transition: max-height 0.3s ease;
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      background: linear-gradient(rgba(255, 255, 255, 0), white);
+    }
+  }
+
+  .with-gradient.expanded {
+    max-height: none;
+  }
 }
