--- a/ng/src/app/app-list/app-list.component.html
+++ b/ng/src/app/app-list/app-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="p-0 mb-3">
+<mat-card class="p-0 ">
   @for (app of appList | async; track app; let last = $last; let first = $first) {
   <app-list-item [app]="app" [ngClass]="{ 'last-item': last, 'first-item': first }"></app-list-item>
   }
