mini style bugs

--- a/_AngularApp.PartLocalAssets.cshtml
+++ b/_AngularApp.PartLocalAssets.cshtml
@@ -11,7 +11,7 @@
 
 
 
-<div class="mat-typography">
+<div>
   @Html.Raw(ngHelper.GetLocalDevTag())
   <script src="@localDevServer/runtime.js" type="module"></script>
   <script src="@localDevServer/polyfills.js" type="module"></script>
