--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
@@ -4,6 +4,7 @@
       display: flex;
       align-items: flex-end;
       .mdc-label {
+        margin-bottom: 3px;
         font-weight: 300;
       }
     }
