--- a/ng/src/app/main/main.component.html
+++ b/ng/src/app/main/main.component.html
@@ -1,4 +1,4 @@
 
-<h1 style="margin-top: 0px;">Dnn and Oqtane Apps</h1>
+<h1 class="mt-0">Dnn and Oqtane Apps</h1>
 <app-filter-options></app-filter-options>
 <app-list></app-list>
