--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.scss
@@ -2,9 +2,9 @@
   ::ng-deep {
     .mdc-form-field {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       .mdc-label {
-        margin-bottom: 3px;
+        margin-bottom: 0px;
         font-weight: 300;
       }
     }
