--- a/ng/src/app/app-list/app-list-item/app-list-item.component.scss
+++ b/ng/src/app/app-list/app-list-item/app-list-item.component.scss
@@ -6,13 +6,16 @@
     background-color: rgba(230, 230, 230, 1);
 
     .with-gradient:after {
-      background: linear-gradient(rgba(255, 255, 255, 0), rgba(230, 230, 230, 1));
+      background: linear-gradient(
+        rgba(255, 255, 255, 0),
+        rgba(230, 230, 230, 1)
+      );
     }
   }
 }
 
 img {
-  border-radius: 30px 0 30px 0;
+  border-radius: 16px 0 16px 0;
   width: 90px;
   min-width: 60px;
 }
