feat: update readme

--- a/ng/src/app/filter-options/filter-options.component.html
+++ b/ng/src/app/filter-options/filter-options.component.html
@@ -10,7 +10,7 @@
   ></app-filter-checkboxes>
 </div>
 
-<!-- Mobil  -->
+<!-- Mobile -->
 <div class="d-block d-md-none mb-3">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
