feat: working default selected WIP (needs improvements)

--- a/ng/src/app/filter-options/filter-selects/filter-selects.component.html
+++ b/ng/src/app/filter-options/filter-selects/filter-selects.component.html
@@ -15,13 +15,12 @@
         </mat-label>
         <mat-select
           [formControlName]="selectGroup?.Category"
-          [compareWith]="isSelected"
+          [compareWith]="compareOptions"
         >
-          <mat-option>Show all</mat-option>
+          <mat-option [value]="null">Show all</mat-option>
           @for (option of selectGroup?.Options; track option) {
             <mat-option
               [value]="option"
-              (onSelectionChange)="handleFilterSelection($event)"
               [disabled]="option?.Disabled"
             >
               {{ option?.Title }}
