--- a/ng/src/styles.scss
+++ b/ng/src/styles.scss
@@ -1,30 +1,37 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import "@angular/material/theming";
-// Plus imports for other components in your app.
+// Include theming for Angular Material with `mat.theme()`.
+// This Sass mixin will define CSS variables that are used for styling Angular Material
+// components according to the Material 3 design spec.
+// Learn more about theming and how to use it for your application's
+// custom components at https://material.angular.dev/guide/theming
+@use "@angular/material" as mat;
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
+// html {
+  // @include mat.theme((
+  //   color: (
+  //     primary: mat.$azure-palette,
+  //     tertiary: mat.$blue-palette,
+  //   ),
+  //   typography: Roboto,
+  //   density: 0,
+  // ));
+// }
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$AppCatalog-primary: mat-palette($mat-indigo);
-$AppCatalog-accent: mat-palette($mat-pink, A200, A100, A400);
+body {
+  // Default the application to a light color theme. This can be changed to
+  // `dark` to enable the dark color theme, or to `light dark` to defer to the
+  // user's system settings.
+  color-scheme: light;
 
-// The warn palette is optional (defaults to red).
-$AppCatalog-warn: mat-palette($mat-red);
+  // Set a default background, font and text colors for the application using
+  // Angular Material's system-level CSS variables. Learn more about these
+  // variables at https://material.angular.dev/guide/system-variables
+  background-color: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+  font: var(--mat-sys-body-medium);
 
-// Create the theme object (a Sass map containing all of the palettes).
-$AppCatalog-theme: mat-light-theme($AppCatalog-primary, $AppCatalog-accent, $AppCatalog-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($AppCatalog-theme);
-
+  // Reset the user agent margin.
+  margin: 0;
+}
 /* You can add global styles to this file, and also import other style files */
 
 html,
@@ -33,4 +40,5 @@ body {
 }
 body {
   margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
